[gd_scene load_steps=46 format=2]

[ext_resource path="res://Scripts/DifficultyButtons.gd" type="Script" id=1]
[ext_resource path="res://Sprites/DifficultyScreen/FacilNormal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/DifficultyScreen/FacilSelect.png" type="Texture" id=3]
[ext_resource path="res://Sprites/StartScreen/BGStartScreen.png" type="Texture" id=4]
[ext_resource path="res://Sprites/DifficultyScreen/MedioNormal.png" type="Texture" id=5]
[ext_resource path="res://Sprites/DifficultyScreen/MedioSelect.png" type="Texture" id=6]
[ext_resource path="res://Sprites/DifficultyScreen/DificlSelect.png" type="Texture" id=7]
[ext_resource path="res://Sprites/DifficultyScreen/DificilNormal.png" type="Texture" id=8]
[ext_resource path="res://Sprites/DifficultyScreen/Dificuldade.png" type="Texture" id=9]
[ext_resource path="res://Sounds/fire-sound-efftect-21991.mp3" type="AudioStream" id=10]
[ext_resource path="res://Foguin.png" type="Texture" id=11]
[ext_resource path="res://Sounds/RockSlide.wav" type="AudioStream" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 384, 64, 128 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BgStartScreen" type="Sprite" parent="."]
position = Vector2( 490, 287 )
scale = Vector2( 2.04, 1.194 )
texture = ExtResource( 4 )
offset = Vector2( 9.80391, 7.95645 )

[node name="Fogo" type="AnimatedSprite" parent="."]
position = Vector2( -19, 548 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 2
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="Fogo2" type="AnimatedSprite" parent="."]
position = Vector2( 357, 573 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 2
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="Fogo3" type="AnimatedSprite" parent="."]
position = Vector2( 748, 539 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 2
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="Dificuldade" type="Sprite" parent="."]
position = Vector2( 516, 140 )
scale = Vector2( 1.258, 1.194 )
texture = ExtResource( 9 )

[node name="Facil" type="TextureButton" parent="."]
margin_left = 383.0
margin_top = 239.0
margin_right = 663.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 140, 41 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 2 )

[node name="Medio" type="TextureButton" parent="."]
margin_left = 381.0
margin_top = 341.0
margin_right = 661.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 140, 41 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="Dificil" type="TextureButton" parent="."]
margin_left = 381.0
margin_top = 452.0
margin_right = 661.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 140, 41 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 8 )

[node name="FogoSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 294, 338 )
stream = ExtResource( 10 )
pitch_scale = 0.8
autoplay = true

[node name="SlideSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 298, 338 )
stream = ExtResource( 12 )

[connection signal="mouse_entered" from="Facil" to="." method="_on_Facil_mouse_entered"]
[connection signal="pressed" from="Facil" to="." method="_on_Facil_pressed"]
[connection signal="mouse_entered" from="Medio" to="." method="_on_Medio_mouse_entered"]
[connection signal="pressed" from="Medio" to="." method="_on_Medio_pressed"]
[connection signal="mouse_entered" from="Dificil" to="." method="_on_Dificil_mouse_entered"]
[connection signal="pressed" from="Dificil" to="." method="_on_Dificil_pressed"]
